--- a/proof.tex
+++ b/proof.tex
@@ -100,7 +100,7 @@ This gives $\kappa_C = 2-1 = 1$, as desired.
 
 \subsection*{Comments}
 
-We calculate $y$ from $i$ and $f$, and close the loop by calculating $i$ using $x$ and $y$. But we never calculate the population susceptibility $x$. This is a tiny bit troubling, since it seems like there must be some assumptions about $x$ necessary for our result. It also strongly suggests that the Roswell conjecture should be true even in the presence of heterogeneous susceptibility (or phenomenologically changing susceptibility in a mean-field model). 
+We calculate $y$ from $i$ and $f$, and close the loop by calculating $i$ using $x$ and $y$. But we never calculate the population susceptibility $x$. This is a tiny bit troubling, since it seems like there must be some assumptions about $x$ necessary for our result. What it seems to mean is that the Roswell conjecture is true more broadly than conjectured – population susceptibility can change, or susceptibles can be replenished, and the excess variation in $R_c$ is still 1 as long as the epidemic is bounded. Further, a limit argument suggests that it should also be true on average for a persistent periodic system.
 
 It would be interesting to think about if there are any ways forward from \eqref{C2pre} for other infectious-time distributions.
 
