--- a/proof.tex
+++ b/proof.tex
@@ -40,7 +40,8 @@ We have:
 	C_0
 	&=& \intint_{\tau<\rho} \dtau\drho w(\tau, \rho) 
 	\\ &=& \int \dtau i(\tau) \int_{\rho>\tau} \drho f(\rho-\tau)
-	\\ &=& \int \dtau i(\tau), 
+	\\ &=& \int \dtau i(\tau) 
+	\\ &=& Z,
 \end{eqnarray}
 as expected.
 
