reszied text to make proof fit on 1 double sided page Autocommit

--- a/proof.tex
+++ b/proof.tex
@@ -1,4 +1,5 @@
-\documentclass[12pt]{article}
+\documentclass[11pt]{article}
+\usepackage[letterpaper,margin=0.75in]{geometry}
 %% \usepackage{amssymb}
 
 \newcommand{\dt}{dt\,}
