--- a/proof.tex
+++ b/proof.tex
@@ -1,5 +1,5 @@
-\documentclass[11pt]{article}
-\usepackage[letterpaper,margin=0.75in]{geometry}
+\documentclass[12pt]{article}
+%% \usepackage[letterpaper,margin=0.75in]{geometry}
 %% \usepackage{amssymb}
 
 \newcommand{\dt}{dt\,}
